--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,8 @@
-spring.datasource.url =jdbc:mysql://localhost/vollmed_api
-spring.datasource.username =root
-spring.datasource.password =root
+spring.datasource.url = jdbc:mysql://localhost/vollmed_api
+spring.datasource.username = root
+spring.datasource.password = root
 
 spring.jpa.show-sql = true
-spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.properties.hibernate.format_sql= true
 
-spring.data.web.pageable.page-parameter=pagina
+server.error.include-stacktrace = never
